Refactor blob detection version with each element having its own method applied to the same frame

--- a/NAPSA/Recolector4/Recolector 4/MainForm.resx
+++ b/NAPSA/Recolector4/Recolector 4/MainForm.resx
@@ -123,4 +123,144 @@
   <metadata name="tmrMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>104, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAMjIAAAEAGABoHwAAFgAAACgAAAAyAAAAZAAAAAEAGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD////////////////////////////////////////////////////////////Lysl+e3srJiUWERAd
+        GBciHRwkHx4hHBsdGBcZFBMhHBsjHh0jHh0iHRwhHBsgGxoaFRR7eHjLysn/////////////////////
+        //////////////////////////////////////////8AAP//////////////////////////////////
+        /////////////////8rJyEhEQxsWFSEcGyolJDEsKzk0Mz45ODs2NTArKiIdHBkUEzItLDQvLjQvLjQv
+        LjgzMjgzMi4pKCEcGxoVFExIR87Nzf//////////////////////////////////////////////////
+        /////wAA////////////////////////////////////////////5eXlTkZGHA4QIBIUKx0hMygrRj9C
+        PTo8LjAwIiUjGxwaFxYSFxIPFRIODg8LEhMRGRcWIB4dLyorNzEyLigpIBobHhgZHBYXGxUWXFlY7u7u
+        ////////////////////////////////////////////////AAD/////////////////////////////
+        //////////+rrqwRDAkoFRg3GCE3FSA3GCc5IjEgGCMSGB8IFxkFFhMHFQ8QGA4bGhAbHBINGhIKGRUP
+        GBURFhUVEhQYERYbEBgdEhoTCBA2LDI3LjEeFhcYDg60sK//////////////////////////////////
+        //////////8AAP///////////////////////////////////3F3cxIfFzAtKTopLDcaIzMQHjARIC0W
+        JB0VIBcaHxMfHxUjHRwkGSMjFSggDyYfEBwgFBkhFx0fGSEeGiMbHCMYGyEVGyEVGyUeIw4HDC0oKkxG
+        RzEnJx4SEKCZmP///////////////////////////////////////wAA////////////////////////
+        ////////YF9eEBcSKTArPT48NjIxKyAjKhwgKhwgJRodMSkqLCUiKCAZKR8VNiYWSjIgXz8saUk2XkQ0
+        XEQ4WEA0TjUrPSggNCIbLyMfLyglLCklKispCg0LCg0LOzk4PDc2KB4ek46O////////////////////
+        ////////////////AAD///////////////////////////9IREMeGhkyNTMxNjQsMS8lKignKyYvMCwz
+        MSkyKyI7LCNKNChdPi9sRjR0RzJ0QixxOCJsMhx7QCxyOCVwOyeCUkCTa1mIallcSjkyKRsnJhgpLSIt
+        NSsiKSIaHRssLCw0LzEcFxlVUVL///////////////////////////////8AAP//////////////////
+        /////2VhYSEcGzYyMT47PS8vLyQqKSgyLCw6Ly86KjY4JUE5IlxCKmg/JnU8I4I9Io5BJptLLqZTN69Y
+        PadHL7NWPbFcQphOMnY6HGs9HnlcPYt7Xl9aQURFMTo/MDQ8MiYsJyElJh4eJA4MEhAODmhlZf//////
+        /////////////////////wAA////////////////////fHl5EAsKHRgXODIzNC8xMS4wNjk3P0c9PUQ1
+        NDchPTcaVD8fYTcUgEIeoVMvvmI/zWtJ0WtIzWVCzV892mND1l8/y189wGE6sWA6mloxfEwiYkEafGhF
+        fnJWU045NDInREVBNzs8FxoiGx0lDgsNFxMSkY+P////////////////////////AAD/////////////
+        //+xr68WERASDQwbFhUzLS47NTpDPkBMR0ROSD1KPytQOyBkRCF9Tyazcka/bkHKaT3RZjrVZDnaZDve
+        ZT3iZj7qZDzpYznhZDjXZDfJZjS6ZTOsZTOfZDZwQhl3UjCXe2OKd2hPREA/PD5DRE4pKjQaFxklISAm
+        IiHDwsH///////////////////8AAP///////////////zAsKyQfHiUgHy0oJ0E7PFNOUFlRUlhHRE81
+        KVkyHHhEJppZM69hNr9mNMtoNNVrNt5uOuVuPelsP+trQO5rP/ZsPvVrPO5rOedtOd1uNtNuN8dsNb1q
+        N7NoPItMJnQ+JYZeTI50bmNVVkA7RE1MVSsoKjYyMTMvLjs4N////////////////////wAA////////
+        ////hYKBGRQTPTg3R0JBRkFAXVhXVVFQZlpWXDw2XSkckUYwuFw/w1w10GEz2mo233A433A43W425HA7
+        7XRC8HJC7mw98m8983E88HI77XI65nA14W413m012m05zGM3wmM8qVU7eTckh1hQlnl1ZFVZXFVaX1pb
+        LysqLiopLysqfnx8////////////////AAD////////n5uYRDAs3MjE/OjlGQUBcV1ZqY2B0a2dXQjpb
+        LSKHPy63UjzSWj3iXjnnYjboazjnczrkdjzgdTvkdz/ue0jzeknxdUX2fEj0fUbxfUTuekHsdjvpcTbo
+        bDbnajjdYDTfakXBWTykTTl+PS+CVEyXfHhjVlRjW1tVUVA0MC8yLi0pJSTm5eX///////////8AAP//
+        /////4qHhxQPDkdCQT86OVhTUmhjYnduanBgVE8uH20xIa5VQc1WQOJXPPVjP/BgNutqOeZyO994P9x7
+        Q+F9R+eAT+9/Ue99TvGCUO+CTuuBS+p+SOZ5QedzPOptO+poOexmPt9aOM1SNstjTJZEMnM3J5pwY5mA
+        dm1iXm5qaUhEQyYiITo2NX58fP///////////wAA////////HBcWODMyPzo5T0pJenV0cGtqfG5oTTEg
+        ZzgillA5u1tDzlM55Vs+92dE7GI46Gs+4HNA2npF2X5L3IBP44NV7IRZ7oVa7IZW6IRU5INR4oFP4H1L
+        33hH43BD52tC7mlD3Vg2211AyVg+tVg/jkQsdD4nrIt4h3pycGxra2dmJCAfOzc2CgYF////////////
+        AAD///+cmpkWERBQS0o7NjV0b26Ig4KGgYBqV09OIguQUDKuXkGxUTPDVDTTXDzaYDzdaEHYbELUckTQ
+        eErSfU/VflLagFfig1voiGDqiGDkhVragVXUf1LPfE/OeE7PcEjTbEXSXjvgZ0fiaEq6SSm0UzKsWTl+
+        PBl7TjOkk4p4dHOFgYBNSUglISALBwaXlZX///////8AAP///0pGRhoVFEA7Ok9KSZGMi355eI6JiEox
+        J3Y5H6RTMKFLJ5tBHrJSLrNSLrBPKcVmP79kPbxlPbxqQcBtR8FuSMRvSc11Udh8WeKBXdp6Vsl0Trpv
+        SbJtRqxoQ6xiPq5cObdWNcBVNLpMKsVaNbNQKqhQJ6pfM14pCJuIe4qGhYeDgoJ+fRcTEhgUE0A8PP//
+        /////wAA////FRAPFRAPLikoeXRzlpGQiIOCcGtqPCAVlkotqEkinUUdlkYdl0wllE4mmFMso143pF03
+        plo2rFs4sF09sVw8sVw8umVFyW9Q2XNWz2tOtmNDo149k108jFw6ilc2kFMznlMzn0YkoUAcwl02uFcr
+        qU8gs2IveT4WbFdIm5eWiISDm5eWOzc2IBwbGRQT////////AAC0srMgGxwKBgUzLi2hmpeWjYqvo59T
+        REFPKhycSS2pRiCvVjGhWTF7SyGDWS+caEOWWTeiXD6fWTyaWjycWz+iVz2iVj+lYkm1blPLcVO+aEqd
+        X0GKWj6FWUGAWkJ6WEB8VzuCTy+kYDu7YzueQBWoUyO7aDWfSBaUTyhNLx6sopuYj4uel5R0cW0kIB85
+        NTSwr6////8AAIF/ghoZGzY0NFRPTKyhnbGfmK+WjEQkGWUzIZ1JMKNCJqhQMqRlQ4FwSWVYMn1OL51V
+        PZ1MN5xXQ5JtV3RVQJpjVJ9oW39bS4FcRqFkRJZgPXxnSHZlUIRgVmxGQXxsX3hrVXljQHxOJalWKatR
+        IoxKF5FNHsFmP5hFJmAwHpB2aLmnnKeclJaSjS4tKTc3N3t7fP///wAAZ2dpKCktPz8/ZWBdsqihuaWa
+        pol7SiMUdDonnEcxtVY8nEAnbzETm5Vwc3FOc0IokUQxp09BmFFDjXFgeGRTfUxCr352iG5icFdDlmdI
+        dkorbmdMkIl4mHFvakBBZVhQiYVzhXdacUokiTkQpU8hml8ujE8jrk0spkkwajIff2FQy7Slr6GVqKKb
+        MjMvNzk5YWJj////AABOTVEvMDRDQ0N5dnK9s6zFsaaVeGpDHhB6QC2hRy+1TjOhPSRuKg3HtpV3bExv
+        OCOYRziVOjGSRz6ujHyEZ1h3PzSuc2msiXt1VEFqMx5xPymWhXKrl4yRXV15QkVxV1Gzo5aEb1mHXEGb
+        SSqgRyWJSyONSSSqRCevTTVwOCVgQTLUva64qp68tq9BQj43OTlISkr///8AABwbHykrLD09PYmGgse/
+        uNC9tYVpXjwZC3hALZ9FLKZAI6hFKYM9INC9nH1vUnRBLYU5LX0oIJ5WTtazpXtcTYBEOIlLQNColp13
+        ZalyZb+NgeDIvL+kmoNHR4BCQnVSTsy4ra2Wh3NLOW4iD4MwGng8HoxJKqlCJ6xJM3c/LkcqG8+5rcK2
+        rMTBuVdYVDAyMhUXGP///wAAHBsfKiwtPj4+kI6NzMO/1cO8fWJYOBYJd0EwmUYqq0wrnEAjeTca2cWm
+        joNoaDwraSgfrGRd26CX7s/Ac1dGfEU2czgo27Kc2bWj1KSe47az7dbOtZiPgEE9fDw4ckxH69bO2se/
+        qouCt3lxmlVLYzIcfkMppkkvljkidkIxPSIUxLClzMG5yMS/a2xqJCYmFRcY////AAAeGh8zMjRERESS
+        kI/OyMPUxL18ZV03FwxyQjCSSSumUi+HNRZyOBv05Md7dFtOLR6gb2f/0cr/59/13s95YU9qOihyPSiv
+        jHL218J8V1POrK3s2dKZfXJ1Ny96PDJ9WU/76ODPw72yn5z2ysngsKqgfm59TzeTQieQQCdsPi1BJxvE
+        sanVysLOysVub20ZGxsUFhf///8AAB4aHyopK0JCQo+NjNTQy9rMxolzbTMWD2U6KYZLK4lFIH88G2c4
+        Gf/02Hx8ZIJvYPfYz//r49/Cue/i0nVmU2A5I25FLHJXNejVunxmYe/d3vvx539oWHA8K3VALIJkUfXq
+        3MTCujk1NGFMTr+mov/+7auQdnk8HJBQMl00JUctJtPButjOx9vY02JjYRQWFhMVFv///wAAHhsdFxYY
+        Njg4iYqI3tnW4tbSlYJ9MBYQVC8hfUoqdzwViE0tSh4B8+bMu7ij9eja///1ya+odF5T593MbmBKakYu
+        b0crVjwY4c+y3s7H//781Mm7WUIsd0UucD0jhWdO//voysm/P0A8KB4eVkpG///y5tS3j105bjcYTisd
+        SzMt49PN2c7K6OXhUlVTEhQUExUW////AABTT1EdHB4PERF6e3nr6OTy5uSsm5gwGRdHJRhwQCR9RSJ5
+        PR95SC7/89v///D///K5o5hcQzmEbGDq1sWojXlzRzCFVjpkQR+fh2v/8uf//PW0o5BkRyx6RCaFTi+r
+        hWf/997Yz8GXkomJfnrFuLD///Do07R8TylsPBpPLSBVQD7k1dLu5eLc29dCRUMoKipPT0////8AAGto
+        aRsbGyYoKFhZV+/t7Oje3se4tjkkI0EgF3RCK2QoColGLdSYgua8qd28rNOzpo5wZXdXTLCOgffVxcyi
+        j5RbRYtSOI5hQMCbf+zNvuTJu7aXgoxhRpdaOqhpR8mYeP/awOXNu9fGudXAuMiypsKtmIpsT2c2EG08
+        HDocEX5qafXo5t3V1eTi4TAzMTU3N2VlZf///wAAhIGBHx8fRkhIOjw85uTk6uTl6t7eWUdINRUPcDop
+        eTUedSgVkEQyejkqf0Y3gE9Bd0o8glVHjl1PjFRDl1dFoFdDnFQ8mVo+hE41h1dFgFJBjlxFmV5EmU8z
+        nlI1oV9ClFtChVZBcEg2YzwuXDMkc0o0ajsgfUIiZzEYMBEIuKip/vLy4tzdyMjILjAwOTs7fn5+////
+        AAC2tLQfHx9QUlI3OTm0tLT69fb98vSRgIMmCQVYJBeEPy5/MSFwHQ6JOi2ZUkSdYlKgbFubZ1agaFWZ
+        VUKwZFK+bFq0ZVC1clmiZk6iaVOUW0agYkqsaVCpXUayZE22bFShXUatcVuWX0p8STVqNyNrOSNVHwh0
+        OCBPHAhGKSTl19n37O738vOFhYU7PT0nKSmzs7P///8AAP///xgYGDs9PUNIR21vb/36/Pzz9tDCxjYc
+        HDoRCFMZDW8nG4AuI446LqteTqxvW59tVp1rVKhwV7x2X8JzXrZnVKpeS6ZlUK92Xa10Wq1yWKppVKll
+        Uq9pWLJqWbFpWLJqWKpnUq1vV5RbQnZAJ203IFkhDmkzIkIVCotycPnr7/zz9vDt70lLSztAPxUXF///
+        /////wAA////TU1NJScnTVJRRUdH39ze+/T3//j7eWdoLhALWzAnXyQacSkfdSYZvHJgpnBXrIJlqoNj
+        o3RVvHtfvXVdv3hkwX9spG9bp3dfoG5QtH5gs3ljsXZmvIF3tHlwq2tgtnVmu3tjxYlsjVc5YjAUYjAZ
+        YC8fSyAXNhMP4MvO//j8//3/v7y+ODo7LzQzTU9P////////AAD///+oqKgbHR1DR0hDR0iXlpr48vf/
+        /P/TxckdEQ00Hxc/Fg1SGw5qJxi0eGKlfl6ukm+eh2GoiGTFknLDiG66hG25inWriHSxknm1kG64j26w
+        hG2ne26kfHeof3y1hX/FkYS4gmvFkXOBVDJWLw9FHAU7GAovFBCJd3j/+P///P/17vNyb3EwMjMfIySd
+        np7///////8AAP///////xkZGTAyMk5QUVZTVe/q7Pzy+P/9/4+MiBEIADQbEVIvIlAhE3dKNbSXfK2Y
+        eK+ce7mggL2VeMCTeL6UfbmWgrWahqePd7aae7OUdb2ahr6cj6yPiK2PiriSjbOJfcOYg6uCaVUzFkot
+        EkMoFDQeEjMmJO3l5v/2/P/8/8nCxTQxMx8eIBMVFf///////////wAA////////ioiHJCAfMi0uPTg5
+        k42O//r7/fj3+/j0REE5Gg8HMB8WNRwSRiwgi3RkuaORvKSSvKGNwaGOyaiVyqqXxKaTvKOPvKSOw6uT
+        w6mRxKmVxKeYwaSWvJ6TwZ6UxqOZwqCTc1ZHLRMFOygbJBYKJx4Vurey///7+fP0//7/bWdoHRgZLyor
+        gH19////////////AAD////////u7u4qJSQiHRwiHRxSTUy1sK////7x7urz8Os3My4KAgAlGRMsHBU+
+        KyOgin/Ms6nVu6/UuavKsKDEq5vLs6HTu6nTvqnBrZvFsZ/IsqDKsaHSuKjbvrDWuK3Iq6KNcmgqEws7
+        KCEcDggJAQChnpnm6OL///z///6kn55RTEsxLCsdGBfm5eX///////////8AAP///////////46MixkU
+        Ey4pKEA7OmNeXdPPzv/8+Pv49OPe2zkzLhEHAB0QCCoYETckHHxnX7WflOfPw+7XyOHMvd/LuuDOvd/O
+        u+XVxOXVxOLQv+LNvunSw9vDt6aLgWpQSR8IADQeGCwaExMHAaiinf/8+P7/+/f49NjU005JSDw3NjQv
+        Lnx5eP///////////////wAA////////////////NDAvPDc2SURDRUA/dHBv9PDv/Pv3///84NnWUUhE
+        FQkDJBYQGAgBJhQNTDkxgG5jsqGU3cy/9+fa+OnZ697O7OLR8ujX7eDSz7+yo5GGdWFWRTAoJA4IHgsE
+        KhcSEwUAqZ6a6OHe//35///85uflcm5tOjU0OTQzOzY1////////////////////AAD/////////////
+        ///NzMwkHx4tKCdNSEdUUE9rZ2b49vX///789/bx6ueHfnsXDAghFQ8jFQ8cDwcfEgovIxlDNy1VTD9u
+        ZViBeWx2cGNhW05KQjU4LyIoHBIdDQYfDQYoFRAbCwU/MC3Owb//9/T///7+/Pvh4uBxcnA2MjE8NzYt
+        KCezsrH///////////////////8AAP///////////////////7i2thgTEklEQ0VBQE1ISVZUVPTv8P//
+        /v///v/5+ce+u1BHQxUKBgoCAA0FABoTChgRCAkEAAkEABMRBxsaEAsKAAgGABUQBxoSCxYMBRsPCyob
+        GIp9e/Lm5P/+/vz09Pj08+zq6mFhYU9PTzo2NS4pKH58e////////////////////////wAA////////
+        ////////////////zszMLyopLCgnXFdYWldZT0pMzMfI9fDx//7////+//r5wby7enVyLCckCAUACgcC
+        Dg8GCwwDBQYACAsCCw4FDRAHCgsCEQ0IQjw3npWS7OPg//7+//j4/vb3/vj539rbWVZYJCMlKykpNjIx
+        bWlp////////////////////////////AAD////////////////////////////u7e0+OjknIiQ7ODo+
+        OTtCPT+1sLH07/Dz7u/////////+/Pvt6+rGx8Oam5dzdW9VVlJBRT9ARkFWXVZ9gXyprajY19P59fT/
+        /v3/+/r/+vv//f717/CppKUwLS8YFRcqKSseHBxlYWL///////////////////////////////8AAP//
+        /////////////////////////////+7u7mllZx4ZGyMeIColJzc0NmFeYK2qrO3t7ff39/////////f6
+        +Pj7+f3//P3//vb69fP49vT79vf8+vr9+/v+/Pz8/Pv5+fz3+P75+7GsrmJdX0A7PTMwMickJh0cHmpp
+        af///////////////////////////////////wAA////////////////////////////////////////
+        aWZnHRgaMCstQ0BCTElLTUxOUVBSlJaWwsTE7/Hx+/398/b09PXz/P37/f/++//+9vv58fb0+fz6/f//
+        8PDwzszMr62tUk1PSENFQz5APzo8LSosGRYYfn1+////////////////////////////////////////
+        AAD////////////////////////////////////////b2tpNSEkoIyQrKSk2NDRAQEBKSko9Pz9ERkZX
+        V1d5eXmmpqbIxsbIxsa3tbXFxcW/wcG0traenp5+fn5eXFxEQkI2NDRFQEE7NjcvKiskHyAbFheysLH/
+        //////////////////////////////////////////8AAP//////////////////////////////////
+        //////////n4+Kmnpzk0NRwaGiclJTY2NklJST8/PzAwMCspKTUwMUQ/QEtFRkhCQzs2N0hGRk9NTT48
+        PCQfIBoVFiwnKEI9PjQvMCkkJR0YGU1KSufn5///////////////////////////////////////////
+        /////wAA////////////////////////////////////////////////////8vLymJeXJSMiEQ8OGhgY
+        JCIiKyYnJiAhIxscKSEiPDEzSj9BOjIzOzM0ODIzMSssJyEiIRscIBobIhwdEAsKTUlIzczM////////
+        ////////////////////////////////////////////////AAD/////////////////////////////
+        ///////////////////////////////r6uqPjo07OTkeGRobFRYhGRosISMyJSctHyElFxkuISMnHB4k
+        GRsnHB4sISMsJCUnHyCCfn/Pzs7/////////////////////////////////////////////////////
+        //////////8AAP//////////////////////////////////////////////////////////////////
+        /////87NzaCcnW9oaVdMTSgXGiwZHDAdICoZHCkbHVlOUG1lZp2XmM3Ky///////////////////////
+        /////////////////////////////////////////////////////wAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
